--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,13 @@ version: "3.9"
 
 services:
   db:
-    image: postgres
+    image: postgres:17
     restart: always
     container_name: postgres
     ports:
-      - "${POSTGRES_PORT}:${POSTGRES_PORT}"
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      - "${POSTGRES_PORT:-5432}:5432"
+    env_file:
+      - .env
     volumes:
       - ./pgdata:/var/lib/postgresql/data
       - ./docker/init.sql:/docker-entrypoint-initdb.d/init.sql
@@ -21,16 +19,16 @@ services:
       retries: 5
 
   pgadmin:
-    image: dpage/pgadmin4
+    image: dpage/pgadmin4:latest
     restart: always
     container_name: pgadmin4
     ports:
       - "5050:80"
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com
-      PGADMIN_DEFAULT_PASSWORD: pgadmin4
+    env_file:
+      - .env
     depends_on:
-      - db
+      db:
+        condition: service_healthy
 
   app:
     build:
@@ -38,13 +36,20 @@ services:
       dockerfile: Dockerfile
     container_name: nest-app
     ports:
-      - "${PORT}:${PORT}"
+      - "${PORT:-7001}:${PORT:-7001}"
     env_file:
-      - .development.env
+      - .env
     depends_on:
       db:
         condition: service_healthy
+      pgadmin:
+        condition: service_started
     volumes:
       - ./:/app
       - /app/node_modules
-    command: sh -c "npx prisma migrate deploy && npm run start:dev"
+    command: >
+      sh -c "
+        npx prisma migrate deploy &&
+        npx prisma generate &&
+        npm run start:dev
+      "
